--- a/todo.txt
+++ b/todo.txt
@@ -68,9 +68,13 @@ git bash commands:
 		# stop and remove CODE containers and delete volumes
 		cd /c/Users/jesse.abdul/Documents/Version\ Control/Git/PIFSC-CU-Containerized-Oracle-Development-Environment
 		
-		docker compose -f ../docker/docker-compose-dev.yml down
-		docker volume rm apex-static-vol
-		docker volume rm db-vol
+		docker compose \
+		  --env-file ./docker/.env \
+		  -f docker/CODE-db-deploy.yml \
+		  -f docker/CODE-db-named-volume.yml \
+		  -f docker/custom-docker-compose.yml \
+		  down -v
+
 		
 		# build and deploy the development scenario of the CODE
 		bash ./deployment_scripts/build_deploy_project.sh dev
@@ -80,8 +84,11 @@ git bash commands:
 		# stop and remove CODE containers and delete volumes
 		cd /c/Users/jesse.abdul/Documents/Version\ Control/Git/PIFSC-CU-Containerized-Oracle-Development-Environment
 		
-		docker compose -f ../docker/docker-compose-test.yml down
-		docker volume rm apex-static-vol
+		docker compose \
+		  --env-file ./docker/.env \
+		  -f docker/CODE-db-deploy.yml \
+		  -f docker/custom-docker-compose.yml \
+		  down -v
 
 		# build and deploy the test scenario of the CODE
 		bash ./deployment_scripts/build_deploy_project.sh test
